# RetroSpaceGame

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: Bullets.cpp  Bullets.h  Debug.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Plane.cpp  Plane.h  Scoreboard.cpp  Scoreboard.h  draw.cpp  draw.h  main.cpp  main_test.cpp
src/Components/: Background.cpp  Background.h  Bomb.cpp  Bomb.h  Bombs.cpp  Bombs.h  Bullet.cpp  Bullet.h  Bullets.cpp  Bullets.h  Butterfly.cpp  Butterfly.h  Crab.cpp  Crab.h  Enemy.cpp  Enemy.h  Fly.cpp  Fly.h  Plane.cpp  Plane.h
src/Levels/: LevelUtils.h  Paths.h  TestLevel.cpp  TestLevel.h
src/Logic/: EnemyType.h  Log.cpp  Log.h  Mode.h  Path.cpp  Path.h  Physics.h
src/assets/: Fly.xcf  Fly2.xcf  butterfly.xcf  butterfly2.xcf  crab.xcf  crab2.xcf  plane.xcf
src/levels/: TestLevel.cpp  TestLevel.h
test/: test.cpp
